SCIP version NEXT
==================


SCIP version 4.0.0
==================

features:
- implemented linear time methods for (weighted) median selection for joint arrays of various types
- new statistic computed: "Root LP Estimate" that shows the root LP best-estimate with every pseudo-cost update
- new SCIP_REGRESSION data structure in pub_misc.h to incrementally compute a best-fit line through pairs of observations
- added leaf statistics about LP objective limit|feasible|infeasible leaves to the statistics output and
  to the callable library: SCIPgetNObjlimLeaves(), SCIPgetNFeasibleLeaves(), SCIPgetNInfeasibleLeaves()
- added adaptive solving behavior of SCIP based on solving phases and heuristic transitions, if enabled via "solvingphases/enabled"
- new presolving step for variables contained in a single quadratic constraint with proper square coefficients
- can now solve relaxations within probing
- will now enforce relaxation solution instead of lp or pseudosolution if lowerbound is better and the whole lp is included in the relaxation
- in case of multiple relaxators the best solution is saved instead of the last one
- can now separate perspective cuts for indicator constraints
- added write callback for reader_bnd
- new target "dll" to build Windows dlls with MSVC
- added possibility to use a reference value for advanced analysis of the tree search. If a finite reference value
  (an objective value in original objective space) is passed via misc/referencevalue, SCIP keeps track of the
  number of nodes exceeding the reference value and the number of early backtracks -- path switches in the tree when
  a child node with lower bound smaller than the reference value was available.
- add new presolving step to disaggregate second order cone constraints
- added reading capabilities for partial solutions with extension *.mst
- new heuristic that tries to complete partial solutions